--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -66,6 +66,8 @@
 
 	<script src="https://cdn.jsdelivr.net/npm/cherry-markdown@0.10.0/dist/cherry-markdown.core.min.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cherry-markdown@0.10.0/dist/cherry-markdown.min.css">
+	
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.3.2/css/flag-icons.min.css" />
 
 	<link rel="stylesheet" href="{{ links.createUrl('/manager/css/manager.css') }}" />
 	<script src="{{ links.createUrl('/manager/js/manager-globals.js') }}"></script>
