append preview token to stored url

--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -91,6 +91,7 @@
 
 		window.manager = {
 			csrfToken: '{{ csrfToken }}',
+			previewToken: '{{ previewToken }}'
 			baseUrl: '{{ managerBaseURL }}',
 			contextPath: '{{ contextPath }}',
 			siteId: '{{ siteId }}',
