--- a/modules/ui-module/src/main/resources/manager/index.html
+++ b/modules/ui-module/src/main/resources/manager/index.html
@@ -91,7 +91,7 @@
 
 		window.manager = {
 			csrfToken: '{{ csrfToken }}',
-			previewToken: '{{ previewToken }}'
+			previewToken: '{{ previewToken }}',
 			baseUrl: '{{ managerBaseURL }}',
 			contextPath: '{{ contextPath }}',
 			siteId: '{{ siteId }}',
